Add create and delete key implementations Remove wallet references in favor of keys
